sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:15: error: ')' expected but '}' found.
  }} 
   ^